renaming intro page - globally changes

--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -19,7 +19,7 @@
             <main class="become-a-host__main">
               <div class="become-a-host__left-vid-container" aria-hidden="false">
                 <div class="_oy5ese hidden-md">
-                  <div class="_1l7bhkmt">
+                  <div class="become-a-host__header-b-wrapper">
                     <div class="become-a-host__header-menu">
                       <div class="page-shell-mobile__container">
                         <div>
@@ -158,8 +158,8 @@
                         ></div>
                       </div>
                     </div>
-                    <div class="_1cu340vw"></div>
-                    <div class="_cu2h1k4">
+                    <div class="become-a-host__video-spacer"></div>
+                    <div class="become-a-host__video-action-b-wrapper">
                       <div>
                         <div class="flex-column">
                           <div class="become-a-host__video-action-content">
@@ -279,31 +279,31 @@
                 </div>
               </div>
               <div class="become-a-host__header" aria-hidden="false">
-                <div class="_1l7bhkmt">
+                <div class="become-a-host__header-b-wrapper">
                   <div class="become-a-host__header-menu">
                     <div class="tab__content-visibility">
-                      <button class="_qa0cc5" type="button">
+                      <button class="become-a-host__exit-btn" type="button">
                         <div class="become-a-host__help-content">
                           <div>Exit</div>
-                          <span aria-hidden="true" class="_1g2aycaq">Exit</span>
+                          <span aria-hidden="true" class="become-a-host__exit-btn-text">Exit</span>
                         </div>
                       </button>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="_1vsbg6fi">
-                <div class="_14lxf1rd">
+              <div class="become-a-host__right-b-container">
+                <div class="become-a-host__right-b-wrapper">
                   <div class="become-a-host__right-content">
                     <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
                       <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
                         <div class="become-a-host__right-form" id="FMP-target">
-                          <div class="_e5xjym4">
-                            <h1 class="_1eg7jkhx">
+                          <div class="become-a-host__right-text-wrapper">
+                            <h1 class="become-a-host__right-text-h1">
                               Become a Host in 10 easy steps
                             </h1>
-                            <div class="_qnr0t6x">
+                            <div class="become-a-host__right-text-desc">
                               <span class="place__tips-desc-text dir dir-ltr"
                                 >Join us. We'll help you every step of the
                                 way.</span
@@ -316,15 +316,15 @@
                   </div>
                 </div>
                 <div class="become-a-host__footer">
-                  <div class="_1dufybwf">
-                    <div class="_1pblb3vf">
+                  <div class="become-a-host__footer-b-wrapper">
+                    <div class="become-a-host__footer-b-action">
                       <div class="become-a-host__footer-next">
                         <a
                           href="property-type-group.html"
-                          class="_cd8zo4d w-full"
-                          ><span class="_jxxpcd"
+                          class="become-a-host__footer-lets-go w-full"
+                          ><span class="become-a-host__lets-go-wrapper"
                             ><span
-                              class="_kaq6tx"
+                              class="become-a-host__lets-go-btn"
                               style="
                                 background-position: calc(
                                     (100 - var(--mouse-x, 0)) * 1%
@@ -332,7 +332,7 @@
                                   calc((100 - var(--mouse-y, 0)) * 1%);
                               "
                             ></span></span
-                          ><span class="_tcp689"
+                          ><span class="become-a-host__lets-go-text"
                             >Let's go!
                             <!-- -->
                           </span></a
