--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -136,10 +136,10 @@
                         </button>
                       </div>
                       <div class="become-a-host__help-wrapper">
-                        <button class="_qa0cc5" type="button">
+                        <button class="become-a-host__exit-btn" type="button">
                           <div class="become-a-host__help-content">
                             <div>Help</div>
-                            <span aria-hidden="true" class="_1g2aycaq"
+                            <span aria-hidden="true" class="become-a-host__exit-btn-text"
                               >Help</span
                             >
                           </div>
@@ -149,10 +149,10 @@
                   </div>
                   <div class="become-a-host__header-menu">
                     <div class="tab__content-visibility">
-                      <button class="_qa0cc5" type="button">
+                      <button class="become-a-host__exit-btn" type="button">
                         <div class="become-a-host__help-content">
                           <div>Save and exit</div>
-                          <span aria-hidden="true" class="_1g2aycaq"
+                          <span aria-hidden="true" class="become-a-host__exit-btn-text"
                             >Save and exit</span
                           >
                         </div>
