--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -429,10 +429,10 @@
                         </a>
                       </div>
                       <div class="become-a-host__footer-next">
-                        <button class="_cd8zo4d">
-                          <span class="_jxxpcd">
+                        <button class="become-a-host__footer-lets-go">
+                          <span class="become-a-host__lets-go-wrapper">
                             <span
-                              class="_kaq6tx"
+                              class="become-a-host__lets-go-btn"
                               style="
                                 background-position: calc(
                                     (100 - var(--mouse-x, 0)) * 1%
@@ -442,7 +442,7 @@
                             >
                             </span>
                           </span>
-                          <span class="_tcp689">Publish your listing </span>
+                          <span class="become-a-host__lets-go-text">Publish your listing </span>
                         </button>
                       </div>
                     </div>
