--- a/gift.html
+++ b/gift.html
@@ -270,9 +270,9 @@
                                       type="button"
                                       class="_6hkhatt"
                                     >
-                                      <span class="_jxxpcd"
+                                      <span class="become-a-host__lets-go-wrapper"
                                         ><span
-                                          class="_kaq6tx"
+                                          class="become-a-host__lets-go-btn"
                                           style="
                                             background-position: calc(
                                                 (100 - var(--mouse-x, 0)) * 1%
@@ -282,7 +282,7 @@
                                               );
                                           "
                                         ></span></span
-                                      ><span class="_tcp689"
+                                      ><span class="become-a-host__lets-go-text"
                                         >Redeem gift card
                                         <!-- -->
                                       </span>
