--- a/help.html
+++ b/help.html
@@ -259,9 +259,9 @@
                                     class="sjnrf6s dir dir-ltr"
                                     data-testid="search-submit-button"
                                   >
-                                    <span class="_jxxpcd"
+                                    <span class="become-a-host__lets-go-wrapper"
                                       ><span
-                                        class="_kaq6tx"
+                                        class="become-a-host__lets-go-btn"
                                         style="
                                           background-position: calc(
                                               (100 - var(--mouse-x, 0)) * 1%
@@ -269,7 +269,7 @@
                                             calc((100 - var(--mouse-y, 0)) * 1%);
                                         "
                                       ></span></span
-                                    ><span class="_tcp689"
+                                    ><span class="become-a-host__lets-go-text"
                                       ><span class="s1gm4fb3 dir dir-ltr"
                                         ><svg
                                           viewBox="0 0 32 32"
