--- a/merchandising.html
+++ b/merchandising.html
@@ -5801,9 +5801,9 @@
                                                                   id="search-btn-text"
                                                                 >
                                                                   <span
-                                                                    class="_jxxpcd"
+                                                                    class="become-a-host__lets-go-wrapper"
                                                                     ><span
-                                                                      class="_kaq6tx"
+                                                                      class="become-a-host__lets-go-btn"
                                                                       style="
                                                                         background-position: calc(
                                                                             (
@@ -5828,7 +5828,7 @@
                                                                       "
                                                                     ></span></span
                                                                   ><span
-                                                                    class="_tcp689"
+                                                                    class="become-a-host__lets-go-text"
                                                                   >
                                                                     <div
                                                                       class="header__search-tabs-filter-searchBtn-content dir dir-ltr"
@@ -16138,9 +16138,9 @@
                                                                   id="search-btn-text"
                                                                 >
                                                                   <span
-                                                                    class="_jxxpcd"
+                                                                    class="become-a-host__lets-go-wrapper"
                                                                     ><span
-                                                                      class="_kaq6tx"
+                                                                      class="become-a-host__lets-go-btn"
                                                                       style="
                                                                         background-position: calc(
                                                                             (
@@ -16165,7 +16165,7 @@
                                                                       "
                                                                     ></span></span
                                                                   ><span
-                                                                    class="_tcp689"
+                                                                    class="become-a-host__lets-go-text"
                                                                   >
                                                                     <div
                                                                       class="header__search-tabs-filter-searchBtn-content dir dir-ltr"
