--- a/signup_login.html
+++ b/signup_login.html
@@ -1294,9 +1294,9 @@
                                           class="_6hkhatt"
                                           data-veloute="submit-btn-cypress"
                                         >
-                                          <span class="_jxxpcd"
+                                          <span class="become-a-host__lets-go-wrapper"
                                             ><span
-                                              class="_kaq6tx"
+                                              class="become-a-host__lets-go-btn"
                                               style="
                                                 background-position: calc(
                                                     (100 - var(--mouse-x, 0)) *
@@ -1310,7 +1310,7 @@
                                                 --mouse-y: 35.4167;
                                               "
                                             ></span></span
-                                          ><span class="_tcp689"
+                                          ><span class="become-a-host__lets-go-text"
                                             >Continue
                                           </span>
                                         </button>
@@ -1435,9 +1435,9 @@
                                         class="_6hkhatt"
                                         data-veloute="submit-btn-cypress"
                                       >
-                                        <span class="_jxxpcd"
+                                        <span class="become-a-host__lets-go-wrapper"
                                           ><span
-                                            class="_kaq6tx"
+                                            class="become-a-host__lets-go-btn"
                                             style="
                                               background-position: calc(
                                                   (100 - var(--mouse-x, 0)) * 1%
@@ -1449,7 +1449,7 @@
                                               --mouse-y: 0;
                                             "
                                           ></span></span
-                                        ><span class="_tcp689">Continue </span>
+                                        ><span class="become-a-host__lets-go-text">Continue </span>
                                       </button>
                                     </div>
                                     <div class="_wfo3ii">
@@ -1460,9 +1460,9 @@
                                         class="_6hkhatt"
                                         data-veloute="submit-btn-cypress"
                                       >
-                                        <span class="_jxxpcd"
+                                        <span class="become-a-host__lets-go-wrapper"
                                           ><span
-                                            class="_kaq6tx"
+                                            class="become-a-host__lets-go-btn"
                                             style="
                                               background-position: calc(
                                                   (100 - var(--mouse-x, 0)) * 1%
@@ -1474,7 +1474,7 @@
                                               --mouse-y: 0;
                                             "
                                           ></span></span
-                                        ><span class="_tcp689">Continue </span>
+                                        ><span class="become-a-host__lets-go-text">Continue </span>
                                       </button>
                                     </div>
                                   </form>
@@ -2300,10 +2300,10 @@
                                       </div>
                                       <div id="airlock-inline-container" aria-live="polite"></div>
                                       <div class="_wfo3ii"><button data-testid="signup-login-submit-btn" type="submit"
-                                          class="_6hkhatt" data-veloute="submit-btn-cypress"><span class="_jxxpcd"><span
-                                              class="_kaq6tx"
+                                          class="_6hkhatt" data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span
+                                              class="become-a-host__lets-go-btn"
                                               style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%); --mouse-x:58.1026; --mouse-y:30.8632;"></span></span><span
-                                            class="_tcp689">Log in </span></button></div><a
+                                            class="become-a-host__lets-go-text">Log in </span></button></div><a
                                         data-testid="forgot-password-link" href="/forgot_password.html"
                                         class="text-link">Forgot password?</a>
                                     </form>
@@ -3245,9 +3245,9 @@
                                           class="_6hkhatt"
                                           data-veloute="submit-btn-cypress"
                                         >
-                                          <span class="_jxxpcd"
+                                          <span class="become-a-host__lets-go-wrapper"
                                             ><span
-                                              class="_kaq6tx"
+                                              class="become-a-host__lets-go-btn"
                                               style="
                                                 background-position: calc(
                                                     (100 - var(--mouse-x, 0)) *
@@ -3259,7 +3259,7 @@
                                                   );
                                               "
                                             ></span></span
-                                          ><span class="_tcp689"
+                                          ><span class="become-a-host__lets-go-text"
                                             >Agree and continue
                                           </span>
                                         </button>
@@ -4695,9 +4695,9 @@
                                         class="_6hkhatt"
                                         data-veloute="submit-btn-cypress"
                                       >
-                                        <span class="_jxxpcd"
+                                        <span class="become-a-host__lets-go-wrapper"
                                           ><span
-                                            class="_kaq6tx"
+                                            class="become-a-host__lets-go-btn"
                                             style="
                                               background-position: calc(
                                                   (100 - var(--mouse-x, 0)) * 1%
@@ -4707,7 +4707,7 @@
                                                 );
                                             "
                                           ></span></span
-                                        ><span class="_tcp689">Continue </span>
+                                        ><span class="become-a-host__lets-go-text">Continue </span>
                                       </button>
                                     </div>
                                   </div>
@@ -4830,9 +4830,9 @@
                                       class="_6hkhatt"
                                       data-veloute="submit-btn-cypress"
                                     >
-                                      <span class="_jxxpcd"
+                                      <span class="become-a-host__lets-go-wrapper"
                                         ><span
-                                          class="_kaq6tx"
+                                          class="become-a-host__lets-go-btn"
                                           style="
                                             background-position: calc(
                                                 (100 - var(--mouse-x, 0)) * 1%
@@ -4842,7 +4842,7 @@
                                               );
                                           "
                                         ></span></span
-                                      ><span class="_tcp689">Continue </span>
+                                      ><span class="become-a-host__lets-go-text">Continue </span>
                                     </button>
                                   </div>
                                   <div class="_wfo3ii">
@@ -4853,9 +4853,9 @@
                                       class="_6hkhatt"
                                       data-veloute="submit-btn-cypress"
                                     >
-                                      <span class="_jxxpcd"
+                                      <span class="become-a-host__lets-go-wrapper"
                                         ><span
-                                          class="_kaq6tx"
+                                          class="become-a-host__lets-go-btn"
                                           style="
                                             background-position: calc(
                                                 (100 - var(--mouse-x, 0)) * 1%
@@ -4865,7 +4865,7 @@
                                               );
                                           "
                                         ></span></span
-                                      ><span class="_tcp689">Continue </span>
+                                      ><span class="become-a-host__lets-go-text">Continue </span>
                                     </button>
                                   </div>
                                 </form>
@@ -5683,10 +5683,10 @@
                                     </div>
                                     <div id="airlock-inline-container" aria-live="polite"></div>
                                     <div class="_wfo3ii"><button data-testid="signup-login-submit-btn" type="submit"
-                                        class="_6hkhatt" data-veloute="submit-btn-cypress"><span class="_jxxpcd"><span
-                                            class="_kaq6tx"
+                                        class="_6hkhatt" data-veloute="submit-btn-cypress"><span class="become-a-host__lets-go-wrapper"><span
+                                            class="become-a-host__lets-go-btn"
                                             style="background-position: calc((100 - var(--mouse-x, 0)) * 1%) calc((100 - var(--mouse-y, 0)) * 1%); --mouse-x:58.1026; --mouse-y:30.8632;"></span></span><span
-                                          class="_tcp689">Log in </span></button></div><a
+                                          class="become-a-host__lets-go-text">Log in </span></button></div><a
                                       data-testid="forgot-password-link" href="/forgot_password.html"
                                       class="text-link">Forgot password?</a>
                                   </form>
@@ -6617,9 +6617,9 @@
                                         class="_6hkhatt"
                                         data-veloute="submit-btn-cypress"
                                       >
-                                        <span class="_jxxpcd"
+                                        <span class="become-a-host__lets-go-wrapper"
                                           ><span
-                                            class="_kaq6tx"
+                                            class="become-a-host__lets-go-btn"
                                             style="
                                               background-position: calc(
                                                   (100 - var(--mouse-x, 0)) * 1%
@@ -6629,7 +6629,7 @@
                                                 );
                                             "
                                           ></span></span
-                                        ><span class="_tcp689"
+                                        ><span class="become-a-host__lets-go-text"
                                           >Agree and continue
                                         </span>
                                       </button>
