--- a/welcome_back.html
+++ b/welcome_back.html
@@ -388,9 +388,9 @@
                                         class="_6hkhatt"
                                         data-veloute="submit-btn-cypress"
                                       >
-                                        <span class="_jxxpcd"
+                                        <span class="become-a-host__lets-go-wrapper"
                                           ><span
-                                            class="_kaq6tx"
+                                            class="become-a-host__lets-go-btn"
                                             style="
                                               background-position: calc(
                                                   (100 - var(--mouse-x, 0)) * 1%
@@ -402,7 +402,7 @@
                                               --mouse-y: 68.3876;
                                             "
                                           ></span></span
-                                        ><span class="_tcp689">Log in </span>
+                                        ><span class="become-a-host__lets-go-text">Log in </span>
                                       </button>
                                     </div>
                                     <a
