Update products tablet view

--- a/products-luxe.html
+++ b/products-luxe.html
@@ -6795,7 +6795,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="confirm-pay hidden block-xl">
+                <div class="confirm-pay hidden block-md">
                   <div class="box-border">
                     <div
                       style="
