--- a/online-experience.html
+++ b/online-experience.html
@@ -7141,7 +7141,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="confirm-pay hidden block-xl">
+                <div class="confirm-pay hidden block-md">
                   <div class="box-border">
                     <div
                       style="
