renaming legal page - globally changes

--- a/edit/about.html
+++ b/edit/about.html
@@ -510,7 +510,7 @@
                                         </div>
                                         <div class="_othqbw">
                                           <span class="place__tips-desc-text dir dir-ltr"
-                                            ><span class="_11waoz2"
+                                            ><span class="become-a-host__checbox-note-link"
                                               ><a
                                                 href="/account-settings/personal-info"
                                                 target="_blank"
@@ -518,7 +518,7 @@
                                               ></span
                                             >
                                             •
-                                            <span class="_11waoz2"
+                                            <span class="become-a-host__checbox-note-link"
                                               ><a
                                                 href="/users/edit-photo"
                                                 target="_blank"
