--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -164,16 +164,16 @@
                     <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
                       <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
-                        <div class="_ujh72r" id="FMP-target">
-                          <div class="_1vy3ikf">
+                        <div class="become-a-host__right-checbox-wrapper" id="FMP-target">
+                          <div class="become-a-host__checbox-card">
                             <div
-                              class="_1gf82i06"
+                              class="become-a-host__checbox-header"
                               style="animation-delay: 400ms"
                             >
-                              <h2 class="_sedfr4">
+                              <h2 class="become-a-host__checbox-header-h2">
                                 Do you have any of these at your place?
                               </h2>
-                              <div class="_k5sftg">
+                              <div class="become-a-host__checbox-header-btn">
                                 <button
                                   aria-label="Help with safety and property info"
                                   type="button"
@@ -200,7 +200,7 @@
                                 </button>
                               </div>
                             </div>
-                            <div class="_gb49jh" style="animation-delay: 400ms">
+                            <div class="become-a-host__checbox-list" style="animation-delay: 400ms">
                               <div
                                 id="SURVEILLANCE"
                                 aria-disabled="false"
@@ -260,7 +260,7 @@
                               </div>
                             </div>
                             <div
-                              class="_gb49jh"
+                              class="become-a-host__checbox-list"
                               style="animation-delay: 449.7412007086385ms"
                             >
                               <div
@@ -301,7 +301,7 @@
                               </div>
                             </div>
                             <div
-                              class="_gb49jh"
+                              class="become-a-host__checbox-list"
                               style="animation-delay: 497.9674649614837ms"
                             >
                               <div
@@ -342,22 +342,22 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_1vy3ikf">
+                          <div class="become-a-host__checbox-card">
                             <div
-                              class="_1gf82i06"
+                              class="become-a-host__checbox-header"
                               style="animation-delay: 449.7412007086385ms"
                             >
-                              <h2 class="_sedfr4">
+                              <h2 class="become-a-host__checbox-header-h2">
                                 Some important things to know
                               </h2>
                             </div>
                             <div
-                              class="_v1sw7ev"
+                              class="become-a-host__checbox-note"
                               style="animation-delay: 497.9674649614837ms"
                             >
                               <span class="place__tips-desc-text dir dir-ltr"
                                 >Be sure to comply with your
-                                <span class="_11waoz2"
+                                <span class="become-a-host__checbox-note-link"
                                   ><a
                                     href="https://www.airbnb.com/help/article/3029/?locale=en&amp;country_override=PH"
                                     target="_blank"
@@ -365,7 +365,7 @@
                                   ></span
                                 >
                                 and review Airbnb's
-                                <span class="_11waoz2"
+                                <span class="become-a-host__checbox-note-link"
                                   ><a
                                     href="https://www.airbnb.com/help/article/2867/nondiscrimination-policy?locale=en&amp;country_override=PH"
                                     target="_blank"
@@ -373,14 +373,14 @@
                                   ></span
                                 >
                                 and
-                                <span class="_11waoz2"
+                                <span class="become-a-host__checbox-note-link"
                                   ><a
                                     href="https://www.airbnb.com/help/article/1857/what-are-airbnb-service-fees?locale=en&amp;country_override=PH"
                                     target="_blank"
                                     >guest and Host fees</a
                                   ></span
                                 >. Update your
-                                <span class="_11waoz2"
+                                <span class="become-a-host__checbox-note-link"
                                   ><a
                                     href="https://www.airbnb.com/help/article/475/how-do-i-choose-a-cancellation-policy-for-my-listing?locale=en&amp;country_override=PH"
                                     target="_blank"
