--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -399,7 +399,7 @@
                                     <span class="place__tips-desc-text dir dir-ltr"
                                       >We’ll only share your address with guests
                                       who are booked as outlined in our
-                                      <span class="_11waoz2"
+                                      <span class="become-a-host__checbox-note-link"
                                         ><a
                                           href="https://www.airbnb.com/help/article/2855/privacy-policy?locale=en&amp;country_override=PH"
                                           target="_blank"
