--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -568,7 +568,7 @@
                                                 >Changes are reviewed before
                                                 they go live on your Experience
                                                 page.
-                                                <span class="_11waoz2"
+                                                <span class="become-a-host__checbox-note-link"
                                                   ><a
                                                     href="https://www.airbnb.com/resources/hosting-experiences/a/add-accessibility-features-to-your-experience-listing-442"
                                                     target="_blank"
@@ -986,7 +986,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                                     <span
                                                       class="place__tips-desc-text dir dir-ltr"
                                                       >Require the booker to
-                                                      <span class="_11waoz2"
+                                                      <span class="become-a-host__checbox-note-link"
                                                         ><a
                                                           href="https://www.airbnb.com/help/article/1237/verifying-your-identity"
                                                           target="_blank"
