renaming legal page - globally changes

--- a/edit/about.html
+++ b/edit/about.html
@@ -860,11 +860,9 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                           </div>
                                         </div>
                                         <div class="_othqbw">
-                                          <span
-                                            class="place__tips-desc-text dir dir-ltr"
-                                          >
-                                            <span class="_11waoz2">
-                                              <a
+                                          <span class="place__tips-desc-text dir dir-ltr"
+                                            ><span class="become-a-host__checbox-note-link"
+                                              ><a
                                                 href="/account-settings/personal-info"
                                                 target="_blank"
                                               >
@@ -872,8 +870,8 @@ Hello! My name is Jose and I am from the Philippines! It is a pleasure to host t
                                               </a>
                                             </span>
                                             •
-                                            <span class="_11waoz2">
-                                              <a
+                                            <span class="become-a-host__checbox-note-link"
+                                              ><a
                                                 href="/users/edit-photo"
                                                 target="_blank"
                                               >
