renaming location page - globally changes

--- a/become-a-host/location.html
+++ b/become-a-host/location.html
@@ -68,8 +68,8 @@
                   </h1>
                 </div>
               </div>
-              <div class="_19co9bom" aria-hidden="false">
-                <div class="_l6v72tr">
+              <div class="become-a-host__header-loc" aria-hidden="false">
+                <div class="become-a-host__header-loc-wrapper">
                   <div class="become-a-host__header-menu">
                     <div class="page-shell-mobile__container hidden-md">
                       <div class="become-a-host__close-wrapper">
@@ -78,7 +78,7 @@
                           type="button"
                           class="become-a-host__close-btn"
                         >
-                          <span class="_q6zl6">
+                          <span class="become-a-host__close-icon">
                             <svg
                               viewBox="0 0 32 32"
                               xmlns="http://www.w3.org/2000/svg"
@@ -107,7 +107,7 @@
                     <div class="flex-items-center">
                       <div class="become-a-host__profile-wrapper">
                         <button
-                          class="_wnevu0"
+                          class="become-a-host__profile-b-btn"
                           type="button"
                           aria-expanded="false"
                           aria-label="Ask a Superhost"
@@ -162,19 +162,19 @@
                 </div>
               </div>
               <div class="become-a-host__right-container">
-                <div class="_1dhc1ohq">
+                <div class="become-a-host__right-loc-wrapper">
                   <div class="become-a-host__right-content">
                     <div class="become-a-host__right-content-wrap" style="transition: opacity 0.6s">
                       <div class="become-a-host__right-wrap">
                         <span style="font-size: 0"></span>
-                        <div class="_184tk81y" id="FMP-target">
-                          <div class="_8ojzb1">
+                        <div class="become-a-host__right-loc-wrap-container" id="FMP-target">
+                          <div class="become-a-host__loc-map">
                             <div
-                              class="_1pulvtcv"
+                              class="become-a-host__loc-map-wrapper"
                               style="height: calc(100vh - 80px)"
                             >
-                              <div class="_1y61moct">
-                                <div class="_4ulxo9">
+                              <div class="become-a-host__loc-map-spacer-t">
+                                <div class="become-a-host__map-spacer-wapper">
                                   <div
                                     style="
                                       height: 703px;
@@ -188,15 +188,15 @@
                                       style="width: 100%"
                                     />
                                   </div>
-                                  <div class="_tr6gyg"></div>
+                                  <div class="become-a-host__loc-map-spacer-overlay"></div>
                                 </div>
                               </div>
-                              <div class="_1nnjtm5">
-                                <div class="_1fnnpuw6">
-                                  <div class="_qgv474">
-                                    <div class="_lbaapj">
-                                      <div class="_sa6nmh">
-                                        <div class="_1bwpfxm">
+                              <div class="become-a-host__loc-map-search">
+                                <div class="become-a-host__loc-map-search-wrapper">
+                                  <div class="become-a-host__loc-map-search-input">
+                                    <div class="become-a-host__map-search-label">
+                                      <div class="become-a-host__map-search-label-wrapper">
+                                        <div class="become-a-host__map-search-btn">
                                           <button
                                             aria-label="Back"
                                             data-testid="title-back-button"
@@ -228,16 +228,16 @@
                                             ></span>
                                           </button>
                                         </div>
-                                        <h2 class="_1kkldxe" tabindex="-1">
+                                        <h2 class="become-a-host__map-search-label-h2" tabindex="-1">
                                           Enter your address
                                         </h2>
                                       </div>
                                     </div>
-                                    <div class="_1l0iogx">
-                                      <div class="_rcxi5a">
-                                        <div class="_171jtg">
+                                    <div class="become-a-host__search-input-wrapper">
+                                      <div class="become-a-host__search-input-content">
+                                        <div class="become-a-host__search-input-textfield">
                                           <div class="inbox-items-header__icon">
-                                            <div class="_1u9tuye">
+                                            <div class="become-a-host__search-input-icon">
                                               <svg
                                                 viewBox="0 0 16 16"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -272,7 +272,7 @@
                                                   aria-controls="autocomplete-results"
                                                   aria-expanded="false"
                                                   data-testid="address-autocomplete-input"
-                                                  class="_6snhnw"
+                                                  class="become-a-host__search-textfield-input"
                                                   id="searchable-address-search"
                                                   value=""
                                                   autocomplete="off"
